--- a/sass/lms_booster/_sec_practics.scss
+++ b/sass/lms_booster/_sec_practics.scss
@@ -6,19 +6,29 @@
         margin-bottom: 63px;
     }
 
-        .circle{
-      width: 50px;
-      right: -51px;
-      top: 148px;
+    .circle {
+        width: 50px;
+        right: -51px;
+        top: 148px;
     }
-    .dubl_line_vertical{
-      right: 15px;
-      top: 1106px;
-      transform: rotate(-90deg);
+
+    .dubl_line_vertical {
+        right: 15px;
+        top: 1106px;
+        transform: rotate(-90deg);
     }
-    .dubl_line_vertical2{
-      left: -100px;
-      top: 476px;
-      transform: rotate(-90deg);
+
+    .dubl_line_vertical2 {
+        left: -100px;
+        top: 476px;
+        transform: rotate(-90deg);
+    }
+
+    @media (max-width: 767.98px) {
+        padding: 30px 0;
+
+        .sec_title h2 {
+            margin-bottom: 30px;
+        }
     }
 }
