--- a/sass/lms_booster/_sec_fear.scss
+++ b/sass/lms_booster/_sec_fear.scss
@@ -1,11 +1,13 @@
 .sec_fear {
     position: relative;
     padding: 76px 0 126px;
-    .circle{
-      width: 50px;
-      top: 78%;
-      right:520px;
+
+    .circle {
+        width: 50px;
+        top: 78%;
+        right: 520px;
     }
+
     .img_wrapp {
         position: relative;
         height: 100%;
@@ -39,5 +41,41 @@
 
     .btn {
         max-width: 350px;
+    }
+
+    @media (max-width: 767.98px) {
+        padding: 30px 0;
+
+        .sec_title.title-left {
+            .upper-title {
+                font-size: 19px;
+                margin-bottom: 30px;
+            }
+
+            h2 {
+                font-size: 22px;
+                margin-bottom: 30px;
+            }
+
+            .under-title {
+                font-size: 16px;
+                margin-bottom: 30px;
+            }
+        }
+
+        .btn {
+            padding: 15px;
+        }
+
+        .img_wrapp {
+            height: 220px;
+            text-align: center;
+            margin-bottom: 30px; 
+
+            img {
+                position: initial;
+                max-width: 200px;
+            }
+        }
     }
 }
