--- a/sass/lms_booster/_sec_get-out-pit.scss
+++ b/sass/lms_booster/_sec_get-out-pit.scss
@@ -24,41 +24,34 @@
             top: -50px;
         }
     }
-}
 
-.sec_title.title-left {
-    text-align: left;
+    @media (max-width: 767.98px) {
+        padding: 40px 0;
 
-    img {
-        display: block;
-    }
+        .sec_title.title-left {
+            .upper-title {
+                font-size: 16px;
+                margin-bottom: 30px;
+            }
 
-    .upper-title {
-        font-style: normal;
-        font-weight: 600;
-        font-size: 24px;
-        line-height: 140%;
-        color: #5C5B5B;
-        margin-bottom: 72px;
-        margin-top: 19px;
-    }
+            .under-title {
+                font-size: 15px;
+            }
 
-    .under-title {
-        font-style: normal;
-        font-weight: bold;
-        font-size: 18px;
-        line-height: 140%;
-        color: #828282;
-        margin-bottom: 20px;
-        text-transform: uppercase;
-    }
+            h2 {
+                font-size: 22px;
+            }
+        }
 
-    h2 {
-        margin: 0;
-        font-style: normal;
-        font-weight: bold;
-        font-size: 38px;
-        line-height: 140%;
-        text-transform: uppercase;
+        .img_wrapp {
+            height: 230px;
+            text-align: center;
+            margin-top: 20px; 
+
+            img {
+                position: initial;
+                max-width: 300px;
+            }
+        }
     }
 }
