--- a/sass/lms_booster/_sec_guarantee.scss
+++ b/sass/lms_booster/_sec_guarantee.scss
@@ -64,4 +64,14 @@
             z-index: -1;
         }
     }
+
+    @media (max-width: 767.98px) {
+        .bg-gradient {
+
+        }
+
+        .sec_title.title-left .upper-title {
+            
+        }
+    }
 }
