--- a/sass/lms_booster/_sec_programm.scss
+++ b/sass/lms_booster/_sec_programm.scss
@@ -1,21 +1,24 @@
 .sec_programm {
     padding: 118px 0 131px;
     background-color: #fbf3e9;
-    .circle{
-      width: 50px;
-      right: -60px;
-      top: 86%;
+
+    .circle {
+        width: 50px;
+        right: -60px;
+        top: 86%;
     }
-    .dubl_line_vertical{
-      left: -106px;
-      top: 67%;
-      transform: rotate(-90deg);
+
+    .dubl_line_vertical {
+        left: -106px;
+        top: 67%;
+        transform: rotate(-90deg);
 
     }
-    .dubl_line_vertical2{
-      right: -106px;
-      top: 52%;
-      transform: rotate(-90deg);
+
+    .dubl_line_vertical2 {
+        right: -106px;
+        top: 52%;
+        transform: rotate(-90deg);
     }
 
     .sec_title {
@@ -24,5 +27,18 @@
 
     b {
         font-weight: 600;
+    }
+
+    @media (max-width: 767.98px) {
+        padding: 30px 0;
+
+        .sec_title {
+            margin-bottom: 40px;
+        }
+
+        .btn-success.btn-lg {
+            font-size: 17px;
+            padding: 15px;
+        }
     }
 }
