--- a/sass/lms_booster/_sec_you_can.scss
+++ b/sass/lms_booster/_sec_you_can.scss
@@ -1,15 +1,18 @@
 .sec_you_can {
     padding: 105px 0 76px;
-    .dubl_line_vertical{
-      right: -90px;
-      top: 42%;
-      transform: rotate(-90deg);
+
+    .dubl_line_vertical {
+        right: -90px;
+        top: 42%;
+        transform: rotate(-90deg);
     }
-    .circle{
-      width: 50px;
-      left: -70px;
-      top: 56%;
+
+    .circle {
+        width: 50px;
+        left: -70px;
+        top: 56%;
     }
+
     .sec_title h2 {
         margin-bottom: 58px;
     }
@@ -22,5 +25,18 @@
         font-size: 26px;
         line-height: 150%;
         color: #F0A744;
+    }
+
+    @media (max-width: 767.98px) {
+        padding: 30px 0;
+
+        .sec_title h2 {
+            margin-bottom: 30px;
+        }
+
+        .text-orange {
+          font-size: 16px;  
+          text-align: center;
+        }
     }
 }
