--- a/sass/lms_booster/_sec_you_get_everything.scss
+++ b/sass/lms_booster/_sec_you_get_everything.scss
@@ -2,7 +2,7 @@
     position: relative;
     padding: 0 0 187px;
     background-color: #FBFBFB;
-    
+
     .img_wrapp {
         position: relative;
         height: 100%;
@@ -42,6 +42,34 @@
             background: linear-gradient(180deg, #FBFBFB 54.13%, rgba(255, 255, 255, 0) 100%), #D0D1D1;
             opacity: 0.3;
             z-index: -1;
+        }
+    }
+
+    @media (max-width: 767.98px) {
+        padding: 0 0 40px;
+
+        .bg-gradient {
+            padding: 30px 0;
+        }
+
+        .sec_title.title-left h2 {
+            font-size: 21px;
+        }
+
+        p {
+            margin-top: 20px;
+            font-size: 17px;
+        }
+
+        .img_wrapp {
+            height: 132px;
+            text-align: center;
+            margin-top: 40px;
+
+            img {
+                max-width: 300px;
+                position: initial;
+            }
         }
     }
 }
