--- a/sass/lms_booster/_sec_author_history.scss
+++ b/sass/lms_booster/_sec_author_history.scss
@@ -1,14 +1,15 @@
 .sec_author_history {
     padding: 85px 0 112px;
 
-    .circle{
-      width: 50px;
-      left: -60px;
-      top: 7%;
+    .circle {
+        width: 50px;
+        left: -60px;
+        top: 7%;
     }
-    .dubl_line{
-      left: 200px;
-      top: 92%;
+
+    .dubl_line {
+        left: 200px;
+        top: 92%;
     }
 
     .sec_title h2 {
@@ -26,5 +27,17 @@
 
     .btn {
         margin-top: 30px;
+    }
+
+    @media (max-width: 767.98px) {
+        padding: 30px 0;
+
+        .sec_title h2 {
+            margin-bottom: 30px;
+        }
+
+        .embed-responsive {
+            margin-bottom: 30px;
+        }
     }
 }
