--- a/sass/lms_booster/_sec_change_life.scss
+++ b/sass/lms_booster/_sec_change_life.scss
@@ -1,20 +1,21 @@
 .sec_change_life {
     padding: 74px 0 87px;
 
-    .circle{
-      width: 50px;
-      left: auto;
-      right: -40px;
-      top: 85%;
+    .circle {
+        width: 50px;
+        left: auto;
+        right: -40px;
+        top: 85%;
     }
-    .dubl_line_vertical{
-      left: 50px;
-      top: 88%;
+
+    .dubl_line_vertical {
+        left: 50px;
+        top: 88%;
     }
 
     .sec_title {
         h2 {
-            margin: 33px 0 31px;
+            margin-bottom: 31px;
             text-transform: uppercase;
             font-weight: 600;
             font-size: 32px;
@@ -26,6 +27,21 @@
             font-weight: 600;
             font-size: 20px;
             line-height: 140%;
+        }
+    }
+
+    @media (max-width: 767.98px) {
+        padding: 30px 0;
+
+        .sec_title {
+            h2 {
+                font-size: 19px;
+            }
+
+            p {
+                font-size: 16px;
+                margin-bottom: 30px;
+            }
         }
     }
 }
