--- a/sass/lms_booster/_sec_prizes.scss
+++ b/sass/lms_booster/_sec_prizes.scss
@@ -1,24 +1,26 @@
 .sec_prizes {
     padding: 93px 0 112px;
 
-    .circle{
-      width: 50px;
-      left: 950px;
-      top: 71%;
+    .circle {
+        width: 50px;
+        left: 950px;
+        top: 71%;
     }
-    .dubl_line{
-      right: -50px;
-      top: 17%;
+
+    .dubl_line {
+        right: -50px;
+        top: 17%;
     }
-    .dubl_line_vertical{
-      left: 100px;
-      top: 78%;
-      transform: rotate(-90deg);
+
+    .dubl_line_vertical {
+        left: 100px;
+        top: 78%;
+        transform: rotate(-90deg);
     }
 
     .sec_title {
         h2 {
-            margin: 33px 0 40px;
+            margin-bottom: 40px;
         }
 
         p {
@@ -26,6 +28,19 @@
             font-weight: 600;
             font-size: 20px;
             line-height: 140%;
+        }
+    }
+
+    @media (max-width: 767.98px) {
+        padding: 30px 0;
+
+        .sec_title p {
+            font-size: 16px;
+        }
+
+        .btn-success.btn-lg {
+            padding: 15px;
+            margin-top: 20px;
         }
     }
 }
