phone mask and minore improve

--- a/sass/main/_common.scss
+++ b/sass/main/_common.scss
@@ -1272,8 +1272,12 @@ h2 {
 }
 
 // ==============================================================
-// 
+// intlTelInput
 // ==============================================================
+.intl-tel-input, .iti {
+    position: relative;
+    display: block; 
+}
 // ==============================================================
 // 
 // ==============================================================
