--- a/sass/newland.scss
+++ b/sass/newland.scss
@@ -1,4 +1,10 @@
 // ==============================================================
+// intlTelInput
+// ==============================================================
+@import "intlTelInput";
+@import "sprite";
+
+// ==============================================================
 // MAIN STYLE
 // ==============================================================
 @import "main/fonts";
