--- a/sass/lidmagnit/_sec_checklist.scss
+++ b/sass/lidmagnit/_sec_checklist.scss
@@ -49,4 +49,45 @@
         }
     }
 
+    @media (max-width: 767.98px) {
+        padding: 30px 0;
+
+        .row {
+            flex-direction: column-reverse !important;
+        }
+
+        .sec_title {
+            p {
+                font-size: 18px;
+            }
+
+            h2 {
+                font-size: 22px;
+                margin-bottom: 30px;
+                margin-top: 20px;
+            }
+        }
+
+        img {
+            max-width: 200px;
+            margin-bottom: 40px;
+        }
+
+        .flex-row-reverse .sec_title {
+            text-align: left;
+
+            p {
+                text-align: left;
+            }
+
+            h2 {
+                text-align: left;
+            }
+
+            .btn {
+                margin-left: initial;
+                margin-right: auto;
+            }
+        }
+    }
 }
