--- a/sass/lidmagnit/_sec_product.scss
+++ b/sass/lidmagnit/_sec_product.scss
@@ -44,4 +44,35 @@
         width: 465px;
         filter: drop-shadow(20px 20px 25px rgba(0, 0, 0, 0.3));
     }
+
+    @media (max-width: 767.98px) {
+        padding: 30px 0;
+
+        h1 {
+            font-size: 21px;
+            margin: 0;
+        }
+
+        .img_wrapp {
+            height: 340px;
+
+            img {
+                box-shadow: none;
+                filter: none
+            }
+        }
+
+        .card {
+            padding: 15px;
+            margin: 0;
+
+            p {
+                font-size: 16px;
+            }
+
+            .btn {
+                max-width: 100%;
+            }
+        }
+    }
 }
