--- a/sass/vebinar/_sec_form_master_class.scss
+++ b/sass/vebinar/_sec_form_master_class.scss
@@ -64,6 +64,12 @@
             color: #FCFCFC;
             margin-bottom: 40px;
         }
+
+        @media (max-width: 767.98px) {
+            h2 {
+                font-size: 22px;
+            }
+        }
     }
 
     @media (max-width: 767.98px) {
