--- a/sass/newland.scss
+++ b/sass/newland.scss
@@ -36,3 +36,4 @@
 @import "lms_booster/sec_what_will_be"; 
 @import "lms_booster/sec_start_your_way"; 
 @import "lms_booster/sec_faq"; 
+@import "lms_booster/sec_tariffs"; 
