--- a/sass/main/_common.scss
+++ b/sass/main/_common.scss
@@ -397,14 +397,15 @@ h2 {
     border: none;
 }
 
+// ==============================================================
 // table styles
-
+// ==============================================================
 .table-responsive {
-    padding: 0 16px;
+    padding: 0;
 }
 
 .table {
-    margin-bottom: 2px;
+    margin-bottom: 0;
 
     thead th {
         vertical-align: bottom;
@@ -428,21 +429,7 @@ h2 {
     td,
     th {
         vertical-align: middle;
-        padding: 14px;
-    }
-
-    tr {
-
-        td,
-        th {
-            &:first-of-type {
-                padding-left: 0;
-            }
-
-            &:last-of-type {
-                padding-right: 0;
-            }
-        }
+        padding: 15px;
     }
 
     .media {
@@ -467,8 +454,27 @@ h2 {
         font-weight: 500;
         font-size: 13px;
         line-height: 130%;
-        color: #A2A2A2;
+        color: #A2A2A2; 
     }
+}
+
+.table-bordered td,
+.table-bordered th {
+    border: 1px solid #D6D6D6;
+}
+
+.table .table-success th,
+.table-success,
+.table-success>td,
+.table-success>th {
+    background-color: #58B58B;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 130%;
+    text-align: center;
+    color: #FCFCFC;
+    vertical-align: middle;
 }
 
 @media (max-width: 767.98px) {
@@ -493,6 +499,9 @@ h2 {
     }
 }
 
+// ==============================================================
+// .btn
+// ==============================================================
 .btn.btn-blue {
     background: #557FAF;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.07);
@@ -1274,10 +1283,12 @@ h2 {
 // ==============================================================
 // intlTelInput
 // ==============================================================
-.intl-tel-input, .iti {
+.intl-tel-input,
+.iti {
     position: relative;
-    display: block; 
+    display: block;
 }
+
 // ==============================================================
 // 
 // ==============================================================
