--- a/sass/newland.scss
+++ b/sass/newland.scss
@@ -9,6 +9,7 @@
 // ==============================================================
 @import "main/fonts";
 @import "main/lightslider";
+@import "main/countdown";
 @import "main/common";
 @import "main/header";
 @import "main/footer";
