--- a/sass/lms_booster/_sec_tariffs.scss
+++ b/sass/lms_booster/_sec_tariffs.scss
@@ -67,46 +67,6 @@
         td {
             border-bottom-color: transparent;
         }
-
-        .text-green {
-            font-style: normal;
-            font-weight: 500;
-            font-size: 14px;
-            line-height: 130%;
-            text-align: center;
-            color: #58B58B;
-            display: block;
-            margin-bottom: 10px;
-        }
-
-        .price {
-            font-style: normal;
-            font-weight: normal;
-            font-size: 32px;
-            line-height: 130%;
-            text-align: center;
-            color: #58B58B;
-            display: block;
-            margin-bottom: 15px;
-        }
-
-        .text-gray {
-            font-style: normal;
-            font-weight: 500;
-            font-size: 14px;
-            line-height: 130%;
-            text-align: center;
-            color: #828282;
-            margin-top: 15px;
-            display: block;
-        }
-
-        .btn-success {
-            height: 40px;
-            width: 170px;
-            font-weight: 600;
-            color: #FCFCFC;
-        }
     }
 
     tbody,
@@ -125,8 +85,122 @@
     @media (max-width: 767.98px) {
         padding: 30px 0;
 
-        .sec_title h2 {
-            margin-bottom: 40px;
+        .sec_title {
+            h2 {
+                margin-bottom: 20px;
+            }
+
+            p {
+                font-size: 16px;
+            }
+        }
+    }
+
+
+    .text-green {
+        font-style: normal;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 130%;
+        text-align: center;
+        color: #58B58B;
+        display: block;
+        margin-bottom: 10px;
+    }
+
+    .price {
+        font-style: normal;
+        font-weight: normal;
+        font-size: 32px;
+        line-height: 130%;
+        text-align: center;
+        color: #58B58B;
+        display: block;
+        margin-bottom: 15px;
+    }
+
+    .text-gray {
+        font-style: normal;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 130%;
+        text-align: center;
+        color: #828282;
+        margin-top: 15px;
+        display: block;
+    }
+
+    .btn-success {
+        height: 40px;
+        width: 170px;
+        font-weight: 600;
+        color: #FCFCFC;
+    }
+}
+
+.mob_tariffs {
+    .card {
+        margin-bottom: 30px;
+        margin-bottom: 30px;
+        overflow: hidden;
+        border-radius: 5px;
+        box-shadow: 0 3px 7px rgba(0, 0, 0, 0.1);
+    }
+
+    .card-header {
+        background-color: #58B58B;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 19px;
+        line-height: 170%;
+        text-align: center;
+        color: #FCFCFC;
+        vertical-align: middle;
+    }
+
+    .card-body {
+        padding: 25px 15px;
+    }
+
+    .card-footer {
+        background-color: #fff;
+        text-align: center;
+
+        .btn-success {
+            width: 100%;
+            margin: 0 auto;
+            height: 50px;
+        }
+    }
+
+    ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+    }
+
+    li {
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 130%;
+        display: flex;
+        align-items: flex-start;
+        color: #828282;
+
+        &:not(:last-of-type) {
+            margin-bottom: 15px;
+        }
+
+        img {
+            width: 18px;
+            height: auto;
+            display: inline-block;
+            margin-top: 3px;
+            margin-right: 17px;
+        }
+
+        b {
+            font-size: 20px;
         }
     }
 }
