--- a/sass/newland/_sec_your_mentor.scss
+++ b/sass/newland/_sec_your_mentor.scss
@@ -37,6 +37,7 @@
             bottom: 0;
             left: 0;
             filter: drop-shadow(20px 20px 25px rgba(0, 0, 0, 0.3));
+            width: 350px;
         }
     }
 
@@ -76,7 +77,7 @@
             height: 360px;
 
             img {
-                max-width: 400px;
+                max-width: 265px;
             }
         }
 
