--- a/sass/newland/_sec_your_mentor.scss
+++ b/sass/newland/_sec_your_mentor.scss
@@ -34,8 +34,9 @@
 
         img {
             position: absolute;
+            width: 550px;
             bottom: 0;
-            left: 0;
+            left: -50px;
             filter: drop-shadow(20px 20px 25px rgba(0, 0, 0, 0.3));
         }
     }
