--- a/sass/newland/_sec_offer.scss
+++ b/sass/newland/_sec_offer.scss
@@ -2,6 +2,15 @@
 	background: #daede5;
 	padding: 79px 0 81px;
 
+	.img_wrapp {
+			position: relative;
+			width: 100%;
+			height: 100%;
+			img {
+					width: 440px;
+			}
+	}
+
 	.main-txt {
 		h2 {
 			font-weight: 500;
@@ -78,6 +87,14 @@
 		.main-txt {
 			font-size: 17px;
 			margin-top: 30px;
+		}
+		.img_wrapp {
+				position: relative;
+				width: 100%;
+				height: 100%;
+				img {
+						width: 330px;
+				}
 		}
 
 		.btn-blue {
