--- a/sass/newland/_header.scss
+++ b/sass/newland/_header.scss
@@ -91,6 +91,9 @@
     align-items: center;
     background-color: #ffffff;
     padding: 3px 17px 5px 12px;
+    b {
+      color: black;
+    }
 }
 
 .nav-link {
@@ -108,6 +111,9 @@
     .navbar-brand {
         padding-top: 3px;
         padding-bottom: 5px;
+        b {
+          color: black;
+        }
     }
 
     .navbar .btn {
