--- a/sass/newland/_header.scss
+++ b/sass/newland/_header.scss
@@ -91,9 +91,7 @@
     align-items: center;
     background-color: #ffffff;
     padding: 3px 17px 5px 12px;
-    b {
-      color: black;
-    }
+    img {width: 150px;}
 }
 
 .nav-link {
