--- a/sass/newland/_header.scss
+++ b/sass/newland/_header.scss
@@ -91,6 +91,9 @@
     align-items: center;
     background-color: #ffffff;
     padding: 3px 17px 5px 12px;
+    img {
+      width: 125px;
+    }
 }
 
 .nav-link {
