--- a/sass/newland/_sec_your_mentor.scss
+++ b/sass/newland/_sec_your_mentor.scss
@@ -35,8 +35,9 @@
         img {
             position: absolute;
             bottom: 0;
-            left: 0;
+            left: -130px;
             filter: drop-shadow(20px 20px 25px rgba(0, 0, 0, 0.3));
+            width: 680px;
         }
     }
 
@@ -76,6 +77,7 @@
             height: 360px;
 
             img {
+                left: -20px;
                 max-width: 400px;
             }
         }
@@ -83,7 +85,7 @@
         .btn-success {
             border-radius: 2px;
             padding: 10px;
-            margin: 25px 0 130px;
+            margin: 25px 0 0;
             font-size: 18px;
         }
 
