--- a/sass/lidmagnit/_sec_what_results.scss
+++ b/sass/lidmagnit/_sec_what_results.scss
@@ -36,3 +36,15 @@
         }
     }
 }
+
+.sec_what_results_3 {
+    .sec_title {
+        p {
+            font-style: normal;
+            font-weight: 500;
+            font-size: 18px;
+            line-height: 160%;
+            max-width: 684px;
+        }
+    }
+}
