--- a/sass/lms_booster/_sec_about_author.scss
+++ b/sass/lms_booster/_sec_about_author.scss
@@ -1,17 +1,6 @@
 .sec_about_author {
     padding-top: 64px;
 
-    .circle {
-        width: 50px;
-        left: 552px;
-        top: 77%;
-    }
-
-    .dubl_line {
-        right: -5px;
-        top: 31%;
-    }
-
     .sec_title p {
         font-style: normal;
         font-weight: 500;
@@ -61,6 +50,19 @@
         }
     }
 
+    // abc_pic
+
+    .circle {
+        width: 50px;
+        left: 552px;
+        top: 77%;
+    }
+
+    .dubl_line {
+        right: -5px;
+        top: 31%;
+    }
+
     @media (max-width: 767.98px) {
         padding-top: 30px;
 
@@ -83,6 +85,10 @@
             font-size: 16px;
             margin: 0 0 30px;
             text-align: center;
+        }
+
+        .dubl_line {
+            display: none;
         }
     }
 }
