--- a/sass/lms_booster/_sec_product.scss
+++ b/sass/lms_booster/_sec_product.scss
@@ -177,6 +177,7 @@
             font-size: 19px;
             margin: 15px 0;
             text-align: center;
+            margin-bottom: 40px;
         }
 
         .undertitle_wrapp {
@@ -249,14 +250,6 @@
         .dubl_line_vertical {
             right: 5%;
             top: 56%;
-        }
-
-        .col-md-4 {
-            order: 0;
-        }
-
-        .col-md-8 {
-            order: 2;
         }
     }
 }
