--- a/sass/vebinar/_sec_product.scss
+++ b/sass/vebinar/_sec_product.scss
@@ -70,6 +70,13 @@
         padding: 22px;
     }
 
+    .col-md-4 {
+        order: 0;
+    }
+    .col-md-8 {
+        order: 2;
+    }
+
     // abs_pic
 
     .circle {
