--- a/sass/lms_booster/_sec_start_your_way.scss
+++ b/sass/lms_booster/_sec_start_your_way.scss
@@ -1,24 +1,6 @@
 .sec_start_your_way {
     padding: 82px 0 120px;
 
-    .circle {
-        width: 50px;
-        right: -100px;
-        top: -3%;
-    }
-
-    .dubl_line {
-        right: 160px;
-        top: 103%;
-        transform: rotate(180deg);
-    }
-
-    .dubl_line_vertical {
-        left: -10px;
-        top: 40%;
-        transform: rotate(90deg);
-    }
-
     .sec_title {
         h2 {
             margin-bottom: 64px;
@@ -67,6 +49,26 @@
         }
     }
 
+    // abs_pic
+
+    .circle {
+        width: 50px;
+        right: -100px;
+        top: -3%;
+    }
+
+    .dubl_line {
+        right: 160px;
+        top: 103%;
+        transform: rotate(180deg);
+    }
+
+    .dubl_line_vertical {
+        left: -10px;
+        top: 40%;
+        transform: rotate(90deg);
+    }
+
     @media (max-width: 767.98px) {
         padding: 30px 0;
 
@@ -101,6 +103,10 @@
                 font-size: 19px;
                 margin-bottom: 20px;
             }
+        }
+
+        .dubl_line_vertical {
+            display: none;
         }
     }
 }
