--- a/sass/newland/_sec_profile.scss
+++ b/sass/newland/_sec_profile.scss
@@ -36,8 +36,8 @@
         img {
             position: absolute;
             bottom: 0;
-            right: -40px;
-            width: 530px;
+            right: -115px;
+            width: 660px;
             filter: drop-shadow(20px 20px 25px rgba(0,0,0,0.3));
         }
     }
@@ -70,6 +70,7 @@
                 display: inline-block;
                 margin-top: 3px;
                 margin-right: 15px;
+                flex-shrink: 0;
             }
 
             b {
@@ -140,7 +141,7 @@
         }
 
         .img_wrapp {
-            height: 400px;
+            height: 240px;
 
             img {
                 width: 100%;
