--- a/sass/newland/_sec_your_mentor.scss
+++ b/sass/newland/_sec_your_mentor.scss
@@ -35,8 +35,9 @@
         img {
             position: absolute;
             bottom: 0;
-            left: 0;
+            left: -110px;
             filter: drop-shadow(20px 20px 25px rgba(0, 0, 0, 0.3));
+            width: 690px;
         }
     }
 
