--- a/sass/newland/_sec_profile.scss
+++ b/sass/newland/_sec_profile.scss
@@ -36,8 +36,8 @@
         img {
             position: absolute;
             bottom: 0;
-            right: -40px;
-            width: 490px;
+            right: -100px;
+            width: 630px;
             filter: drop-shadow(20px 20px 25px rgba(0,0,0,0.3));
         }
     }
@@ -70,6 +70,7 @@
                 display: inline-block;
                 margin-top: 3px;
                 margin-right: 15px;
+                flex-shrink: 0;
             }
 
             b {
@@ -87,6 +88,9 @@
         max-width: 566px;
         width: 100%;
         margin-bottom: 52px;
+        img {
+          width: 100px;
+        }
     }
     // abs pic
     .circle {
