--- a/sass/newland/_sec_my_projects.scss
+++ b/sass/newland/_sec_my_projects.scss
@@ -65,7 +65,8 @@
         }
 
         .media-image {
-            max-width: 20%;
+            max-width: 100%;
+            width: 150px
         }
 
         .media.vertical {
