--- a/sass/newland/_sec_your_mentor.scss
+++ b/sass/newland/_sec_your_mentor.scss
@@ -78,13 +78,14 @@
 
             img {
                 max-width: 400px;
+                left: -30px;
             }
         }
 
         .btn-success {
             border-radius: 2px;
             padding: 10px;
-            margin: 25px 0 130px;
+            margin: 25px 0 50px;
             font-size: 18px;
         }
 
