--- a/sass/newland/_sec_profile.scss
+++ b/sass/newland/_sec_profile.scss
@@ -37,7 +37,7 @@
             position: absolute;
             bottom: 0;
             right: -40px;
-            width: 490px;
+            width: 400px;
             filter: drop-shadow(20px 20px 25px rgba(0,0,0,0.3));
         }
     }
@@ -70,6 +70,7 @@
                 display: inline-block;
                 margin-top: 3px;
                 margin-right: 15px;
+                flex-shrink: 0;
             }
 
             b {
@@ -147,7 +148,7 @@
                 right: initial;
                 left: 50%;
                 transform: translateX(-50%);
-                max-width: 345px;
+                max-width: 300px;
             }
         }
         // abs icons
