--- a/sass/thx.scss
+++ b/sass/thx.scss
@@ -6,6 +6,9 @@
 // ==============================================================
 // COMMON
 // ==============================================================
+body {
+    padding-top: 43px;
+}
 .btn.btn-success::before {
     content: '';
     display: inline-block;
