--- a/sass/main/_common.scss
+++ b/sass/main/_common.scss
@@ -1195,6 +1195,7 @@ h2 {
             min-width: 50px;
             height: 50px;
             margin-right: 35px;
+            border-radius: 50%;
         }
 
         p {
