--- a/sass/newland/_sec_profile.scss
+++ b/sass/newland/_sec_profile.scss
@@ -116,6 +116,10 @@
             i {
                 margin-top: 10px;
             }
+
+            br {
+              display: block;
+            }
         }
 
         .card {
