--- a/sass/newland/_sec_profile.scss
+++ b/sass/newland/_sec_profile.scss
@@ -83,7 +83,7 @@
         display: -ms-flex;
         display: flex;
         align-items: center;
-        justify-content: space-between;
+        justify-content: space-around;
         max-width: 566px;
         width: 100%;
         margin-bottom: 52px;
