--- a/sass/newland/_sec_your_mentor.scss
+++ b/sass/newland/_sec_your_mentor.scss
@@ -35,7 +35,8 @@
         img {
             position: absolute;
             bottom: 0;
-            left: 0;
+            width: 600px;
+            left: -50px;
             filter: drop-shadow(20px 20px 25px rgba(0, 0, 0, 0.3));
         }
     }
@@ -73,10 +74,11 @@
         }
 
         .img_wrapp {
-            height: 360px;
+            height: 310px;
 
             img {
                 max-width: 400px;
+                left: -15px;
             }
         }
 
