youtube on swipe

--- a/sass/main/_common.scss
+++ b/sass/main/_common.scss
@@ -1305,8 +1305,15 @@ h2 {
 }
 
 // ==============================================================
-// 
+// js-iframe_swiping
 // ==============================================================
+.js-iframe_swiping.active {
+    z-index: 2;
+
+    iframe {
+        z-index: -1;
+    }
+}
 // ==============================================================
 // 
 // ==============================================================
