--- a/sass/newland/_common.scss
+++ b/sass/newland/_common.scss
@@ -486,7 +486,7 @@ h2 {
     display: -webkit-flex;
     display: -ms-flex;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     max-width: 273px;
     width: 100%;
 
