--- a/sass/lidmagnit/_sec_what_results.scss
+++ b/sass/lidmagnit/_sec_what_results.scss
@@ -45,6 +45,7 @@
             font-size: 18px;
             line-height: 160%;
             max-width: 684px;
+            margin-top: 10px;
         }
     }
 }
