--- a/sass/lms_booster/_sec_what_results.scss
+++ b/sass/lms_booster/_sec_what_results.scss
@@ -47,4 +47,10 @@
         top: 98%;
         transform: rotate(180deg);
     }
+
+    @media (max-width: 767.98px) {
+        .circle {
+            display: none; 
+        }
+    }
 }
