--- a/sass/vebinar/_sec_product.scss
+++ b/sass/vebinar/_sec_product.scss
@@ -92,20 +92,20 @@
     }
 
     @media (max-width: 767.98px) {
-        padding: 30px 0;
+        padding: 30px 0 0;
 
         h1 {
-            font-size: 22px;
+            font-size: 19px;
             margin-bottom: 0;
+            text-align: left;
         }
 
         .upper-title {
             font-size: 16px;
-            text-align: center;
         }
 
         .img_wrapp {
-            margin: 25px 0px;
+            margin: 25px 0px 0;
             height: 325px;
 
             img {
@@ -114,29 +114,32 @@
         }
 
         .undertitle {
-            font-size: 16px;
-            text-align: center;
-        }
-
-        .undertitle_wrapp .date_wrap {
-            margin-right: auto;
-            margin-left: auto;
-            margin-bottom: 30px;
+            font-size: 13px;
         }
 
         .undertitle_wrapp {
-            margin-bottom: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            margin-bottom: 15px;
+
+            .date_wrap {
+
+                .item {
+                    &:first-child {
+                        // margin-right: 0;
+                        margin-bottom: 12px;
+                    }
+
+                    .date {
+                        height: 65px;
+                    }
+                }
+            }
         }
 
         .card {
             margin-bottom: 0;
-        }
-
-        .col-md-4 {
-            order: 0;
-        }
-        .col-md-8 {
-            order: 2;
         }
     }
 }
